# ruche-connectee

./: .dockerignore  Dockerfile  README.md  RELEASE_NOTE.md  docker-compose.yml  package-lock.json  pyproject.toml
admin_template/: add_sensor.json  delete_old_sensor_records.js
backend/: .gitignore  main.py  pyproject.toml
backend/apps/beehive/: actions.py  models.py  routers.py
backend/apps/event/: models.py  routers.py
backend/apps/sensor/: models.py  routers.py
backend/apps/user/: auth.py  models.py  routers.py  token_router.py  user_router.py
backend/config/: __init__.py
backend/tests/: conftest.py
backend/tests/behive/: test_behive_routers.py
backend/tests/event/: test_event_routers.py
backend/tests/sensor/: test_sensor_routers.py
backend/tests/sensor_pusher/: dummy_sensor_pusher.py  test_sensor_pusher.py
frontend/: .gitignore  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.test.tsx  App.tsx  index.tsx
frontend/src/components/: chart-bar.component.tsx  chart-line.component.tsx  chart-scatter-line.component.tsx  date-range-selector.component.tsx  desktop-left-menu.component.tsx  error-box.component.tsx  hive-list-selector.component.tsx  hive-metrics.component.tsx  hive-sensor-chart-page.component.tsx  icon.component.tsx  mobile-main-menu.component.tsx
frontend/src/components/contexts/: viewport.context.ts
frontend/src/hooks/: date-range.hook.ts
frontend/src/routes/: error-page.tsx  hive-alert-show-page.tsx  hive-battery-show-page.tsx  hive-humidity-show.page.tsx  hive-index.page.tsx  hive-show.page.tsx  hive-temperature-show.page.tsx  hive-weight-show-page.tsx  hive.page.tsx  login-page.tsx  root.tsx
frontend/src/services/: chart.service.ts  cookie.service.ts  date.service.ts  hive.service.ts  login.service.ts  user.service.ts
sensor_pusher/: config_loader.py  push_sensors_data.py  pyproject.toml  sensor_pusher.py
sensor_pusher/schemas/: payload.schema.json  temperature_sensor.schema.json  weight_sensor.schema.json
sensor_pusher/sensors/: base_sensor_reader.py  gps_reader.py  temperature_reader.py  weight_reader.py
sensor_pusher/temperature/: config.py  pusher.py
sensor_pusher/weight/: config.py  pusher.py
