[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["GdPaul1234 <paul.godin1234@outlook.fr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.89.1"
uvicorn = "^0.20.0"
motor = "^3.1.1"
python-dotenv = "^0.21.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
