[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["GdPaul1234 <paul.godin1234@outlook.fr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

# API Server
[tool.poetry.group.api.dependencies]
fastapi = "^0.89.1"
uvicorn = { extras = ["standard"], version = "^0.20.0" }
pydantic = { extras = ["email"], version = "^1.10.4" }
ujson = "^5.7.0"
email-validator = "^1.3.1"
python-multipart = "^0.0.5"

# JWT & Auth
[tool.poetry.group.auth.dependencies]
fastapi-users = { extras = ["mongodb"], version = "^10.3.0" }
python-jose = { extras = ["cryptography"], version = "^3.3.0" }
passlib = { extras = ["bcrypt"], version = "^1.7.4" }

# Database
[tool.poetry.group.db.dependencies]
motor = "^3.1.1"
python-dotenv = "^0.21.1"


[tool.poetry.group.test.dependencies]
pytest = "^7.2.1"
httpx = "^0.23.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
